<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@drawable/btn_shape">

            <LinearLayout
                android:id="@+id/highscoreView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/high_score"
                    android:textColor="@color/menu_text"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/random_score"
                    android:textColor="@color/menu_text"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/last_play"
                    android:textColor="@color/menu_text"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/random_score"
                    android:textColor="@color/menu_text"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnHome"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:background="@drawable/btn_shape"
                android:src="@drawable/ic_home" />

            <ImageButton
                android:id="@+id/btnJoin"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:background="@drawable/btn_shape"
                android:src="@drawable/ic_search" />

            <ImageButton
                android:id="@+id/btnCreate"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:background="@drawable/btn_shape"
                android:src="@drawable/ic_create" />

            <ImageButton
                android:id="@+id/btnStart"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:background="@drawable/btn_shape"
                android:src="@drawable/ic_play" />

        </LinearLayout>


    </LinearLayout>
</layout>